Fixed alignment on title in modals

--- a/src/kirby/components/modal/modal-wrapper/modal-wrapper.component.scss
+++ b/src/kirby/components/modal/modal-wrapper/modal-wrapper.component.scss
@@ -8,17 +8,25 @@
   height: 100%;
 
   .modal-header {
-    display: flex;
+    display: grid;
     justify-content: flex-end;
-    padding: size('s');
+    grid-template-columns: [start]#{size('xl')} [title]1fr [end]#{size('xl')};
+    padding: 0 size('s');
 
     .title {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      width: 100%;
-      margin: 0;
+      grid-area: title;
       text-align: center;
+      margin: size('m') 0;
+    }
+
+    > *:first-child:not(.title) {
+      grid-area: start;
+      align-self: center;
+    }
+
+    > *:last-child:not(.title) {
+      grid-area: end;
+      align-self: center;
     }
   }
 
